--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,38 @@
+<!doctype html>
 <html>
-<body>
-<h2>Hello World!</h2>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="autogeo">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>AutoGeo WebApp</title>
+        
+        <link rel="stylesheet" href="./build/css/autogeo.css">
+    </head>
+    <body ng-app="AutoGeoApp">
+
+    	<div class="container" ng-controller="MapaCtrl">
+    		<div class="row">
+                <header>
+                    <div class="col-xs-12 col-sm-4 col-md-5 col-lg-5 pull-left">
+                        <div id="logo">
+                            <img src="build/img/autogeo.png" alt="logo_autogeo" width="200" height="35">
+                        </div>
+                    </div>
+                    <div class="hidden-xs col-sm-8 col-md-7 col-lg-7 pull-left">
+                        <div id="menu">
+                            <a href="#" class="ativo"><span class="glyphicon glyphicon-globe"></span>Mapa</a>
+                            <a href="#"><span class="glyphicon glyphicon-star"></span>Meus Favoritos</a>
+                            <a href="#"><span class="glyphicon glyphicon-thumbs-up"></span>Meus Likes</a>
+                            <a href="#"><span class="glyphicon glyphicon-bullhorn"></span>Meus Anuncios</a>
+                            <a href="#"><span class="glyphicon glyphicon-file"></span>Cadastre-se</a>
+                        </div>
+                    </div>
+                </header>
+    		</div>
+    	</div>
+
+        <script src="./build/js/autogeo-deps.js"></script>
+        <script src="./build/js/autogeo.min.js"></script>
+    
+    </body>
 </html>
