--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="./build/css/autogeo-deps.css">
         <link rel="stylesheet" href="./build/css/autogeo.css">
         
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+        
         <script src="./build/js/autogeo-deps.js"></script>
         <script src="./build/js/autogeo.min.js"></script>
     </head>
