--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,11 +19,11 @@
             </div>
             <div class="hidden-xs hidden-sm hidden-md col-lg-7 pull-left">
                 <div id="menu">
-                    <a href="#/" active-link="ativo"><span class="glyphicon glyphicon-globe"></span>Mapa</a>
-                    <a href="#/favoritos" active-link="ativo"><span class="glyphicon glyphicon-star"></span>Meus Favoritos</a>
-                    <a href="#"><span class="glyphicon glyphicon-thumbs-up"></span>Meus Likes</a>
-                    <a href="#"><span class="glyphicon glyphicon-bullhorn"></span>Meus Anuncios</a>
-                    <a href="#/cadastro" active-link="ativo"><span class="glyphicon glyphicon-file"></span>Cadastre-se</a>
+                    <a href="#/" active-link="ativo">Mapa</a>
+                    <a href="#/favoritos" active-link="ativo">Meus Favoritos</a>
+                    <a href="#">Meus Likes</a>
+                    <a href="#">Meus Anuncios</a>
+                    <a href="#/cadastro" active-link="ativo"></span>Cadastre-se</a>
                 </div>
             </div>            
         </header>
