--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
                 <div id="menu">
                     <a href="#/" active-link="ativo">Mapa</a>
                     <a href="#/favoritos" active-link="ativo">Meus Favoritos</a>
-                    <a href="#/anuncios">Meus Anuncios</a>
+                    <a href="#/anuncios" active-link="ativo">Meus Anuncios</a>
                     <a href="#/cadastro" active-link="ativo"></span>Cadastre-se</a>
                 </div> 
             </div> 
