--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,9 +29,9 @@
 	            <div class="logout pull-right" >
 	            	<span class="glyphicon glyphicon-off pull-right" ng-click="logout()" tooltip-placement="left" tooltip="Sair"></span>
 	            </div>          
-	            <div class="config pull-right">
-	            	<span class="glyphicon glyphicon-cog pull-right" tooltip-placement="left" tooltip="Configurações"></span>
-	            </div>           
+<!-- 	            <div class="config pull-right"> -->
+<!-- 	            	<span class="glyphicon glyphicon-cog pull-right" tooltip-placement="left" tooltip="Configurações"></span> -->
+<!-- 	            </div>            -->
             </div>
         </header>
 
