--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,7 @@
                     <a href="#/favoritos" active-link="ativo">Meus Favoritos</a>
                     <a href="#/anuncios" active-link="ativo">Meus Anuncios</a>
                     <a href="#/cadastro" active-link="ativo" ng-show="!showElement()"></span>Cadastre-se</a>
+                    <a href="#/login" active-link="ativo" ng-show="!showElement()"></span>Login</a>
                 </div> 
             </div> 
             <div class="col-sm-2 col-md-2 col-lg-2 pull-right menuDireito" ng-controller="LoginCtrl" ng-show="showElement()">
