--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,8 +14,9 @@
     <body>
             
         <header>
-            <div id="logo" class="col-xs-5 col-sm-3 col-md-3 col-lg-3 pull-left">
-				<img src="build/img/autogeo.png" alt="logo_autogeo" width="200" height="35">
+            <div id="logo" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 pull-left">
+				<img src="build/img/autogeo.png" class="hidden-xs" alt="logo_autogeo" width="200" height="35">
+				<img src="build/img/autogeo_mini.png" class="hidden-sm hidden-md hidden-lg" alt="logo_autogeo" width="57" height="35">
             </div>
             <div class="hidden-xs col-sm-7 col-md-6 col-lg-7 pull-left">
                 <div id="menu">
@@ -27,7 +28,7 @@
                 </div> 
             </div> 
             <div class="hidden-sm hidden-md hidden-lg pull-left" >
-            	<button class="btn btnAzul" style="margin-top:8px;" enable-menu-responsivo>
+            	<button class="btn btnAzul" style="margin-top:8px;margin-left:5px;" enable-menu-responsivo>
             		<span class="glyphicon glyphicon-menu-hamburger"></span>
             		Menu
            		</button>
